--- a/css/index.css
+++ b/css/index.css
@@ -46,11 +46,9 @@ display: table;   /* Allow the centering to work */
 }
 
 .Blog-Contents {
-    align: center;
+  
    padding-top: 1px;
-  padding-left: 20px;
   padding-bottom: 1px;
-  padding-right: 20px;
   margin-left: 30px;
   margin-right: 30px;
   font-size: 17px;
